<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_20sdp"
    tools:context=".presentation.startgame.StartGameFragment">

    <TextView
        android:id="@+id/tvLabelHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/falling_words"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLabelInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_instructions"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/colorBlack"
        app:layout_constraintBottom_toTopOf="@+id/tvInstructionsText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvInstructionsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        android:textColor="@color/colorBlack"
        android:textStyle="italic"
        android:textSize="@dimen/_12ssp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toTopOf="@+id/btnStartGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelHeading"
        app:layout_constraintVertical_chainStyle="spread" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnStartGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_start_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInstructionsText" />


</androidx.constraintlayout.widget.ConstraintLayout>
