<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.game.FallingWordsGameFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clHeaderInfoContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Sample Word" />

        <TextView
            android:id="@+id/tvLabelScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/score"
            app:layout_constraintEnd_toStartOf="@+id/tvUserScore"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWord" />

        <TextView
            android:id="@+id/tvUserScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBottomOf="@id/tvLabelScore"
            app:layout_constraintEnd_toStartOf="@+id/tvLabelLives"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvLabelScore"
            tools:layout_editor_absoluteY="29dp"
            tools:text="60" />

        <TextView
            android:id="@+id/tvLabelLives"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/lives"
            app:layout_constraintEnd_toStartOf="@+id/tvUserLives"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvUserScore"
            app:layout_constraintTop_toBottomOf="@+id/tvWord" />

        <TextView
            android:id="@+id/tvUserLives"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBottomOf="@id/tvLabelLives"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvLabelLives"
            tools:layout_editor_absoluteY="29dp"
            tools:text="60" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/tvFallingWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clHeaderInfoContainer" />

    <ImageView
        android:id="@+id/ivAnswer"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:contentDescription="@string/icon"
        android:src="@drawable/ic_baseline_check_24"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clBottomActionContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnWrong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnWrong"
            app:backgroundTint="@android:color/holo_red_dark"
            app:layout_constraintEnd_toStartOf="@+id/tvCounter"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnCorrect"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnWrong"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="10" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCorrect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCorrect"
            app:backgroundTint="@android:color/holo_green_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvCounter"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/layoutGameOver"
        layout="@layout/layout_game_over"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>
